part 6